<resources>
    <string name="app_name">Railway Village</string>
    <string name="title_history">歷史淵源</string>
    <string name="opening_history">屬於花園街64號的一段故事...</string>
    <string name="body_history">藝術村約於民國30年代興建，為紅磚、杉木桁架、水泥瓦建築，室內無任何支柱，
        展現屋頂桁樑結構巧奪天工之美。依舊有市區圖判斷原與1-2號倉庫連結一體，二戰期間受到美軍轟炸屋頂炸毀，
        今所見屋頂乃戰後修復完成，致屋頂形式不盡相同。至80年東大高架橋興建時，將倉庫斜對面攔腰斬，
        成為藝術村所在之3-5號倉庫與現存1-2號倉庫，遙遙相對。\n\n86年文建會推動「鐵道藝術網絡」，
        新竹市政府90年擇定臺鐵3-5號倉庫成立「新竹市鐵道藝術村」，歷經數度整修於93年開館，初期發展在地產業；
        自104年登錄為歷史建築，顯示其重要性。\n\n至今，藝術村不僅深入地方文化，融入創作、推廣美學等工作，
        以青年藝術、親子為客群，建立與民間共構的協力模式，持續培育駐村藝術家，成為推廣鐵道及新形態藝術的實驗據點。</string>
    <string name="title_info">參觀資訊</string>
    <string name="title_frame">相框體驗</string>
    <string name="time_info">營業時間</string>
    <string name="time">10:00 ~ 19:00 (週一休館)</string>
    <string name="phone_info">連絡電話</string>
    <string name="phone"><u>(03)562-8933</u></string>
    <string name="addr_info">地址</string>
    <string name="addr"><u>新竹市花園街64號</u></string>
    <string name="trans_info">公共運輸</string>
    <string name="trans">【火車】\n新竹火車站>後站5號出口>沿著東大路一段、花園街步行10分鐘即可到達。\n
        【大客車】\n可停於南大路140巷與東大路一段之間的大客車停車場，沿南大路140巷直走到底右轉接東大路一段、花園街步行5分鐘即可到達。\n
        【自小客車】\n請將車輛停放於東大高架陸橋下停車場或轉運站附近停車場。</string>
    <string name="more_info">更多資訊</string>
    <string name="more"><u>新竹市文化局-鐵道藝術村</u></string>
    <string name="dis_info">目前距離</string>
    <string name="dis"></string>
    <string name="title_env">館內介紹</string>
    <string name="opening_env">探索鐵道藝術村</string>
    <string name="select_region_dialog_title">選擇您想探索的目的地</string>
    <string name="title_intro">機構簡介</string>
    <string name="body_intro">「新竹市鐵道藝術村」室內可供使用面積約400坪左右，
        規劃為：駐村工作室、主展場、追火車月台、多功能教室，以及鐵道小賣店</string>
    <string name="input_error">您未選擇目的地</string>
    <string name="title_env0">駐村工作室</string>
    <string name="title_env1">主展場</string>
    <string name="title_env2">追火車月台</string>
    <string name="title_env3">多功能教室</string>
    <string name="title_env4">小賣店與閱覽區</string>
    <string name="body_env0">爲爲促進在地藝術茁壯及善用鐵道藝術的空間，鼓勵藝術創作，
        每年公開遴選駐村藝術家，提供藝術家創思空間，讓天馬行空的想像無限延伸。
        將藝術創作傳習出去，讓文化藝術能夠推廣且傳之久遠。
        創作個人工作室為藝術交流之開放空間，
        藉由藝術家進駐於村內不僅可拉近藝術家和民眾之間的距離並致力於提供大眾更多接觸本土及國際文化的機會。</string>
    <string name="subtitle_env0">駐村計畫</string>
    <string name="body2_env0">進駐期限：可提供一年內駐村\n
        同期間可接待藝術家人數：5位（或團體）\n
        獎補助：免費工作室\n
        藝術家自付：500元清潔管理費（每間工作室設置獨立電表，根據電表自行負擔電費）\n
        申請方式：公開徵選\n
        審查機制：由評審團審查、評選\n
        藝術家回饋方案：自提計畫\n
        藝術家展演：每年舉辦一次「藝事節」</string>
    <string name="body_env1">每年舉辦各大主題活動、藝文展覽的主要場域，
        彈性的展牆與寬敞的展覽場域，
        適宜多元的藝術表現形式，囊括視覺藝術、表演藝術、空間藝術等類型。</string>
    <string name="subtitle_env1">2018藝事節\n</string>
    <string name="body2_env1">第15屆駐村藝術家將透過本年度的藝術創作，
        傳達創作者的對環境、人群、社會、自我內心的探索與觀點，
        運用平面、立體、影音的方式，呈現藝術創意。</string>
    <string name="subtitle2_env1">展覽現場</string>
    <string name="body_env2">為本市唯一能近距離欣賞火車行進的空間，能貼近火車隆隆富節奏的聲響，成為來訪朋友最喜愛的地點。</string>
    <string name="subtitle_env2">鐵道風光</string>
    <string name="body2_env2">追火車月台位於鐵道藝術村後方的室外場所，
        左手邊為新竹火車站，右手邊為北新竹火車站，
        可以看到火車在這兩個火車站之間穿梭。
        此處亦有數個座位可供遊客乘坐、休息，雖然這是一個不大的空間，
        但非常適合想要放鬆身心的人去靜靜地坐在那裏。</string>
    <string name="body_env3">硬體設備配有軌道燈、斗笠燈，以及活動式全鏡面拉門，適合各類型講座、工作坊、藝術活動進行。</string>
    <string name="subtitle_env3">環境空間</string>
    <string name="body2_env3">多功能教室提供舒適、寧靜的環境，入內之前必須先脫鞋，空間內亦有抱枕、書櫃等生活雜物。</string>
    <string name="body_env4">爲不定期更新鐵道文化、地方特色之文創商品販售，並提供各類輕食、飲品，可於免費使用之座椅區休憩享用。
        坐落大片落地窗邊的親子閱覽區，提供桌椅與書架，讓參觀民眾得以於此處與孩子伴讀，或親手製作藝術村所開發的文創DIY商品。</string>
    <string name="subtitle_env4">小賣店</string>
    <string name="subtitle2_env4">親子閱覽區</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="appwidget_text2">~新竹市鐵道藝術村關心您~</string>
    <string name="add_widget">Add widget</string>
</resources>
