<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="#22AAAA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/back_info"
                android:layout_width="43dp"
                android:layout_height="35dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/home_icon"
                android:src="@android:color/transparent" />
            <TextView
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/title_info"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                android:gravity="center"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/info_image"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                 />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/time_info"
                android:textSize="20sp"
                android:textColor="#22AAAA"
                android:layout_marginLeft="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/phone_info"
                android:textSize="20sp"
                android:textColor="#22AAAA"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/btn_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="16sp"
                android:textColor="#0000FF"
                android:autoLink="phone"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/addr_info"
                android:textSize="20sp"
                android:textColor="#22AAAA"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:id="@+id/btn_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addr"
                android:textSize="16sp"
                android:textColor="#0000FF"
                android:autoLink="map"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/trans_info"
                android:textSize="20sp"
                android:textColor="#22AAAA"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/trans"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>