<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="#22AAAA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/title_env4"
                android:textSize="25sp"
                android:textColor="#FFFFFF"
                android:gravity="center"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:src="@drawable/env_n"
            android:layout_width="wrap_content"
            android:layout_height="180dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/opening_env"
            android:textSize="20sp"
            android:textColor="#22AAAA"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:text="@string/title_intro"
            android:textSize="20sp"
            android:textColor="#22AAAA"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="3dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/body_intro"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</LinearLayout>