<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toolbar"
    android:background="#88DD88"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_marginRight="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_history"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:gravity="right"/>
    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/history0"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/opening_history"
                android:textSize="22sp"
                android:textColor="#0000FF"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/body_history"
                android:textSize="18sp"
                android:textColor="#000000"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"/>
        </LinearLayout>
    </ScrollView>
</android.support.v7.widget.Toolbar>